# LoLGameClientAPI

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/basic_listener/: Cargo.toml  README.md
examples/basic_listener/src/: event_manager.rs  main.rs
src/: api.rs  event_listener.rs  lib.rs  model.rs  riotgames.cer
tests/: api.rs  model.rs
tests/api_response/: liveclientdata_events.json
