[package]
name = "lol-game-client-api"
version = "0.1.0"
authors = ["Macherel Gael <djazouli@protonmail.com>"]
repository = "https://github.com/Djazouli/LoLGameClientAPI"
homepage = "https://github.com/Djazouli/LoLGameClientAPI"
description = "League of Legends local Game Client API"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = [ "riot-games", "riot", "league", "league-of-legends" ]
categories = [ "api-bindings", "web-programming::http-client" ]

[dependencies]
reqwest = {version = "*", features = ["json"]}
serde = {version = "*", features = ["derive"]}
thiserror = "*"

[dev-dependencies]
serde_json = "*"
tokio = {version = "*", features = ["full"]}