[package]
name = "lol-game-client-api"
version = "0.1.8"
authors = ["Macherel Gael <djazouli@protonmail.com>"]
repository = "https://github.com/Djazouli/LoLGameClientAPI"
homepage = "https://github.com/Djazouli/LoLGameClientAPI"
description = "League of Legends local Game Client API"
readme = "README.md"
edition = "2021"
license = "MIT"
keywords = [ "riot-games", "riot", "league", "league-of-legends" ]
categories = [ "api-bindings", "web-programming::http-client" ]

exclude = [
"tests/*"
]

[dependencies]
async-trait = "^0.1.52"
log = "^0.4"
reqwest = {version = "^0.11", features = ["json"]}
serde = {version = "^1.0", features = ["derive"]}
thiserror = "^1.0.30"
tokio = { version = "1.28", features = ["full"] }

[dev-dependencies]
serde_json = "^1.0.73"
tokio = { version = "1.28", features = ["full"] }
